changes in html and flask

--- a/templates/add-job.html
+++ b/templates/add-job.html
@@ -18,6 +18,8 @@
 ================================================== -->
 	<link rel="stylesheet" href="/static/css/style.css">
 	<link rel="stylesheet" href="/static/css/colors/green.css" id="colors">
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -36,8 +38,9 @@
 				<div class="sixteen columns">
 
 					<!-- Logo -->
+
 					<div id="logo">
-						<h1><a href="index.html"><img src="static/images/logo.png" alt="Work Scout" /></a></h1>
+						<h1><a href="{{ url_for('index') }}"><img src="" alt="" /><i style="position: relative; top: 3px; right: 3px;" class='bx bxl-redbubble'></i>Binary Brains</a></h1>
 					</div>
 
 					<!-- Menu -->
@@ -47,21 +50,11 @@
 							<li><a href="{{ url_for('index') }}">Home</a>
 							</li>
 
-							<li><a href="#">Pages</a>
-								<ul>
-									<li><a href="job-page.html">Job Page</a></li>
-									<li><a href="resume-page.html">Resume Page</a></li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-							</li>
-
 							<li><a href="#">For Freelancer</a>
 								<ul>
 									<li><a href="browse-jobs.html">Browse Jobs</a></li>
 									<li><a href="browse-categories.html">Browse Categories</a></li>
 									<li><a href="add-resume.html">Add Resume</a></li>
-									<li><a href="manage-resumes.html">Manage Resumes</a></li>
-									<li><a href="job-alerts.html">Job Alerts</a></li>
 								</ul>
 							</li>
 
@@ -69,7 +62,7 @@
 								<ul>
 									<li><a href="{{ url_for('addjob') }}">Add Job</a></li>
 									<li><a href="{{ url_for('manage_jobs') }}">Manage Jobs</a></li>
-									<li><a href="{{ url_for('browse_res') }}">Browse Resumes</a></li>
+									<li><a href="{{ url_for('manage_app') }}">Manage Application</a></li>
 								</ul>
 							</li>
 
@@ -162,6 +155,10 @@
 							<h3>• Overview</h3>
 						</div>
 
+						<div class="form">
+							<h5>Job Title</h5>
+							<input class="search-field" type="text" name="job_title" value="" />
+						</div>
 
 						<div class="form">
 							<h5>Job Location</h5>
@@ -169,8 +166,8 @@
 						</div>
 
 						<div class="form">
-							<h5>Job Title</h5>
-							<input class="search-field" type="text" name="job_title" value="" />
+							<h5>Location</h5>
+							<input class="search-field" type="text" placeholder="e.g. Sweden" name="job_location" value="" />
 						</div>
 
 						<div class="form">
