--- a/templates/account.html
+++ b/templates/account.html
@@ -35,7 +35,7 @@
 
 		<!-- Logo -->
 		<div id="logo">
-			<h1><a href="index.html"><img src="/static/images/logo.png" alt="Work Scout" /></a></h1>
+			<h1><a href="{{ url_for('index') }}"><img src="/static/images/logo.png" alt="Work Scout" /></a></h1>
 		</div>
 
 		<!-- Menu -->
@@ -45,44 +45,26 @@
 				<li><a href="{{ url_for('index') }} ">Home</a>
 				</li>
 
-				<li><a href="#">Pages</a>
-					<ul>
-						<li><a href="job-page.html">Job Page</a></li>
-						<li><a href="job-page-alt.html">Job Page Alternative</a></li>
-						<li><a href="resume-page.html">Resume Page</a></li>
-						<li><a href="shortcodes.html">Shortcodes</a></li>
-						<li><a href="pricing-tables.html">Pricing Tables</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</li>
-
-				<li><a href="#">For Candidates</a>
+				<li><a href="#">For Freelancer</a>
 					<ul>
 						<li><a href="browse-jobs.html">Browse Jobs</a></li>
 						<li><a href="browse-categories.html">Browse Categories</a></li>
 						<li><a href="add-resume.html">Add Resume</a></li>
-						<li><a href="manage-resumes.html">Manage Resumes</a></li>
-						<li><a href="job-alerts.html">Job Alerts</a></li>
 					</ul>
 				</li>
 
-				<li><a href="#">For Employers</a>
+				<li><a href="#">Hire Freelancer</a>
 					<ul>
 						<li><a href="add-job.html">Add Job</a></li>
 						<li><a href="manage-jobs.html">Manage Jobs</a></li>
 						<li><a href="manage-applications.html">Manage Applications</a></li>
-						<li><a href="browse-resumes.html">Browse Resumes</a></li>
 					</ul>
 				</li>
 
-				<li><a href="blog.html">Blog</a></li>
+			
 			</ul>
 
 
-			<ul class="responsive float-right">
-				<li><a href="my-account.html#tab2"><i class="fa fa-user"></i> Sign Up</a></li>
-				<li><a href="my-account.html"><i class="fa fa-lock"></i> Log In</a></li>
-			</ul>
 
 		</nav>
 
