--- a/templates/browse-categories.html
+++ b/templates/browse-categories.html
@@ -14,8 +14,10 @@
 
 <!-- CSS
 ================================================== -->
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/colors/green.css" id="colors">
+<link rel="stylesheet" href="/static/css/style.css">
+<link rel="stylesheet" href="/static/css/colors/green.css" id="colors">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -35,59 +37,59 @@
 
 		<!-- Logo -->
 		<div id="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt="Work Scout" /></a></h1>
+			<h1><a href="{{ url_for('index') }}"><img src="" alt="" /><i style="position: relative; top: 3px; right: 3px;" class='bx bxl-redbubble'></i>Binary Brains</a></h1>
 		</div>
 
 		<!-- Menu -->
 		<nav id="navigation" class="menu">
 			<ul id="responsive">
 
-				<li><a href="index.html">Home</a>
+				<li><a href="{{ url_for('index') }}">Home</a>
+				</li>
+
+
+				<li><a href="#">For Freelancer</a>
 					<ul>
-						<li><a href="index.html">Home #1</a></li>
-						<li><a href="index-2.html">Home #2</a></li>
-						<li><a href="index-3.html">Home #3</a></li>
-						<li><a href="index-4.html">Home #4</a></li>
+						<li><a href="{{ url_for('bro_jobs') }}">Browse Jobs</a></li>
+						<li><a href="{{ url_for('bro_category') }}">Browse Categories</a></li>
+						<li><a href="{{ url_for('resume') }}">Add Resume</a></li>
 					</ul>
 				</li>
 
-				<li><a href="#">Pages</a>
+				<li><a href="#">Hire Freelancer</a>
 					<ul>
-						<li><a href="job-page.html">Job Page</a></li>
-						<li><a href="job-page-alt.html">Job Page Alternative</a></li>
-						<li><a href="resume-page.html">Resume Page</a></li>
-						<li><a href="shortcodes.html">Shortcodes</a></li>
-						<li><a href="pricing-tables.html">Pricing Tables</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="{{ url_for('addjob') }}">Add Job</a></li>
+						<li><a href="{{ url_for('manage_jobs') }}">Manage Jobs</a></li>
+						<li><a href="{{ url_for('manage_app') }}">Manage Application</a></li>
 					</ul>
 				</li>
 
-				<li><a href="#" id="current">For Candidates</a>
+				{% if 'username' in session %}
+
+				<li><a href="blog.html">Settings</a>
 					<ul>
-						<li><a href="browse-jobs.html">Browse Jobs</a></li>
-						<li><a href="browse-categories.html">Browse Categories</a></li>
-						<li><a href="add-resume.html">Add Resume</a></li>
-						<li><a href="manage-resumes.html">Manage Resumes</a></li>
-						<li><a href="job-alerts.html">Job Alerts</a></li>
+						<li><a href="{{ url_for('index') }}">Edit Profile</a></li>
+						<li><a href="{{ url_for('logout') }}">Logout</a></li>
 					</ul>
 				</li>
-
-				<li><a href="#">For Employers</a>
-					<ul>
-						<li><a href="add-job.html">Add Job</a></li>
-						<li><a href="manage-jobs.html">Manage Jobs</a></li>
-						<li><a href="manage-applications.html">Manage Applications</a></li>
-						<li><a href="browse-resumes.html">Browse Resumes</a></li>
-					</ul>
-				</li>
-
-				<li><a href="blog.html">Blog</a></li>
+				{% endif %}
 			</ul>
 
 
-			<ul class="responsive float-right">
-				<li><a href="my-account.html#tab2"><i class="fa fa-user"></i> Sign Up</a></li>
-				<li><a href="my-account.html"><i class="fa fa-lock"></i> Log In</a></li>
+			<ul class="float-right">
+				<!-- Check if the user is logged in -->
+				{% if 'username' in session %}
+					<!-- Show profile dropdown -->
+					<li class="dropdown">
+						<a class="profile">
+							<img style="width: 50px;" src="/static/images/profile.png">
+						</a>
+					</li>
+				{% else %}
+					<!-- Show login/signup links -->
+					<li><a href="{{ url_for('account') }}"><i class="fa fa-user"></i> Create account</a></li>
+					<!-- <li><a href="{{ url_for('login') }}"><i class="fa fa-lock"></i> Log In</a></li> -->
+				{% endif %}
 			</ul>
 
 		</nav>
@@ -112,7 +114,7 @@
 		</div>
 
 		<div class="six columns">
-			<a href="add-job.html" class="button">Post a Job, It’s Free!</a>
+			<a href="{{ url_for('addjob') }}" class="button">Post a Job, It’s Free!</a>
 		</div>
 
 	</div>
@@ -310,19 +312,19 @@
 
 <!-- Scripts
 ================================================== -->
-<script src="scripts/jquery-2.1.3.min.js"></script>
-<script src="scripts/custom.js"></script>
-<script src="scripts/jquery.superfish.js"></script>
-<script src="scripts/jquery.themepunch.tools.min.js"></script>
-<script src="scripts/jquery.themepunch.revolution.min.js"></script>
-<script src="scripts/jquery.themepunch.showbizpro.min.js"></script>
-<script src="scripts/jquery.flexslider-min.js"></script>
-<script src="scripts/chosen.jquery.min.js"></script>
-<script src="scripts/jquery.magnific-popup.min.js"></script>
-<script src="scripts/waypoints.min.js"></script>
-<script src="scripts/jquery.counterup.min.js"></script>
-<script src="scripts/jquery.jpanelmenu.js"></script>
-<script src="scripts/stacktable.js"></script>
+<script src="/static/scripts/jquery-2.1.3.min.js"></script>
+<script src="/static/scripts/custom.js"></script>
+<script src="/static/scripts/jquery.superfish.js"></script>
+<script src="/static/scripts/jquery.themepunch.tools.min.js"></script>
+<script src="/static/scripts/jquery.themepunch.revolution.min.js"></script>
+<script src="/static/scripts/jquery.themepunch.showbizpro.min.js"></script>
+<script src="/static/scripts/jquery.flexslider-min.js"></script>
+<script src="/static/scripts/chosen.jquery.min.js"></script>
+<script src="/static/scripts/jquery.magnific-popup.min.js"></script>
+<script src="/static/scripts/waypoints.min.js"></script>
+<script src="/static/scripts/jquery.counterup.min.js"></script>
+<script src="/static/scripts/jquery.jpanelmenu.js"></script>
+<script src="/static/scripts/stacktable.js"></script>
 
 
 
