--- a/templates/browse-jobs.html
+++ b/templates/browse-jobs.html
@@ -16,6 +16,8 @@
 ================================================== -->
 <link rel="stylesheet" href="/static/css/style.css">
 <link rel="stylesheet" href="/static/css/colors/green.css" id="colors">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -35,59 +37,58 @@
 
 		<!-- Logo -->
 		<div id="logo">
-			<h1><a href="index.html"><img src="/static/images/logo.png" alt="Work Scout" /></a></h1>
+			<h1><a href="{{ url_for('index') }}"><img src="" alt="" /><i style="position: relative; top: 3px; right: 3px;" class='bx bxl-redbubble'></i>Binary Brains</a></h1>
 		</div>
 
 		<!-- Menu -->
 		<nav id="navigation" class="menu">
 			<ul id="responsive">
 
-				<li><a href="index.html">Home</a>
+				<li><a href="{{ url_for('index') }}">Home</a>
+				</li>
+
+				<li><a href="#" id="current">For Freelancer</a>
 					<ul>
-						<li><a href="index.html">Home #1</a></li>
-						<li><a href="index-2.html">Home #2</a></li>
-						<li><a href="index-3.html">Home #3</a></li>
-						<li><a href="index-4.html">Home #4</a></li>
+						<li><a href="{{ url_for('bro_jobs') }}">Browse Jobs</a></li>
+						<li><a href="{{ url_for('bro_category') }}">Browse Categories</a></li>
+						<li><a href="">Add Resume</a></li>
 					</ul>
 				</li>
 
-				<li><a href="#">Pages</a>
+				<li><a href="#">Hire Freelancer</a>
 					<ul>
-						<li><a href="job-page.html">Job Page</a></li>
-						<li><a href="job-page-alt.html">Job Page Alternative</a></li>
-						<li><a href="resume-page.html">Resume Page</a></li>
-						<li><a href="shortcodes.html">Shortcodes</a></li>
-						<li><a href="pricing-tables.html">Pricing Tables</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="{{ url_for('addjob') }}">Add Job</a></li>
+						<li><a href="{{ url_for('manage_jobs') }}">Manage Jobs</a></li>
+						<li><a href="{{ url_for('manage_app') }}">Manage Applications</a></li>
 					</ul>
 				</li>
 
-				<li><a href="#" id="current">For Candidates</a>
+				{% if 'username' in session %}
+
+				<li><a href="blog.html">Settings</a>
 					<ul>
-						<li><a href="browse-jobs.html">Browse Jobs</a></li>
-						<li><a href="browse-categories.html">Browse Categories</a></li>
-						<li><a href="add-resume.html">Add Resume</a></li>
-						<li><a href="manage-resumes.html">Manage Resumes</a></li>
-						<li><a href="job-alerts.html">Job Alerts</a></li>
+						<li><a href="{{ url_for('index') }}">Edit Profile</a></li>
+						<li><a href="{{ url_for('logout') }}">Logout</a></li>
 					</ul>
 				</li>
-
-				<li><a href="#">For Employers</a>
-					<ul>
-						<li><a href="add-job.html">Add Job</a></li>
-						<li><a href="manage-jobs.html">Manage Jobs</a></li>
-						<li><a href="manage-applications.html">Manage Applications</a></li>
-						<li><a href="browse-resumes.html">Browse Resumes</a></li>
-					</ul>
-				</li>
-
-				<li><a href="blog.html">Blog</a></li>
+				{% endif %}
 			</ul>
 
 
-			<ul class="responsive float-right">
-				<li><a href="my-account.html#tab2"><i class="fa fa-user"></i> Sign Up</a></li>
-				<li><a href="my-account.html"><i class="fa fa-lock"></i> Log In</a></li>
+			<ul class="float-right">
+				<!-- Check if the user is logged in -->
+				{% if 'username' in session %}
+					<!-- Show profile dropdown -->
+					<li class="dropdown">
+						<a class="profile">
+							<img style="width: 50px;" src="/static/images/profile.png">
+						</a>
+					</li>
+				{% else %}
+					<!-- Show login/signup links -->
+					<li><a href="{{ url_for('account') }}"><i class="fa fa-user"></i> Create account</a></li>
+					<!-- <li><a href="{{ url_for('login') }}"><i class="fa fa-lock"></i> Log In</a></li> -->
+				{% endif %}
 			</ul>
 
 		</nav>
@@ -108,7 +109,7 @@
 <div id="titlebar">
 	<div class="container">
 		<div class="ten columns">
-			<span>We found 1,412 jobs matching:</span>
+			<span>We found 1,264 jobs matching:</span>
 			<h2>Web, Software & IT</h2>
 		</div>
 
@@ -127,30 +128,44 @@
 	<div class="eleven columns">
 	<div class="padding-right">
 		
-		<form action="#" method="get" class="list-search">
+		<!-- <form action="#" method="get" class="list-search">
 			<button><i class="fa fa-search"></i></button>
 			<input type="text" placeholder="job title, keywords or company name" value=""/>
 			<div class="clearfix"></div>
+		</form> -->
+
+		<form action="#" method="get" class="list-search">
+			<button><i class="fa fa-search"></i></button>
+			<input type="text" id="searchInput" placeholder="job title, keywords, or company name">
+			<div class="clearfix"></div>
 		</form>
 
-		<ul class="job-list full">
+		<ul id="jobTitlesList" class="job-list full">
 
-			{% for job in jobs %}
-			<li><a href="{{ url_for('job_page', job_id=job['_id']) }}">
-				<img src="images/job-list-logo-01.png" alt="">
-				<div class="job-list-content">
-					<h4>{{ job.job_title }}<span class="full-time">{{ job.job_type }}</span></h4>
-					<div class="job-icons">
-						<span><i class="fa fa-briefcase"></i> {{ job.company_name }}</span>
-						<span><i class="fa fa-map-marker"></i> {{ job.job_location }}</span>
-						<span><i class="fa fa-money"></i> {{ job.job_salary }}</span>
-					</div>
-					<p>{{ job.description }}</p>
-				</div>
-				</a>
-				<div class="clearfix"></div>
-			</li>
-			{% endfor %}
+			{% if jobs %}
+			<ul class="job-list full">
+				{% for job in jobs %}
+				<li>
+					<a href="{{ url_for('job_page', job_id=job['_id']) }}">
+						<img src="{{ job.logo }}" alt="">
+						<div class="job-list-content">
+							<h4>{{ job.job_title }}<span class="full-time">{{ job.job_type }}</span></h4>
+							<div class="job-icons">
+								<span><i class="fa fa-briefcase"></i> {{ job.company_name }}</span>
+								<span><i class="fa fa-map-marker"></i> {{ job.job_location }}</span>
+								<span><i class="fa fa-money"></i> {{ job.job_salary }}</span>
+							</div>
+							<p>{{ job.description }}</p>
+						</div>
+					</a>
+					<div class="clearfix"></div>
+				</li>
+				{% endfor %}
+			</ul>
+		{% else %}
+			<p>No jobs found.</p>
+		{% endif %}
+		
 
 			
 		</ul>
@@ -375,6 +390,30 @@
 <script src="/static/scripts/jquery.counterup.min.js"></script>
 <script src="/static/scripts/jquery.jpanelmenu.js"></script>
 <script src="/static/scripts/stacktable.js"></script>
+
+
+<script>
+    // Get the input and job list elements
+    const searchInput = document.getElementById('searchInput');
+    const jobList = document.getElementsByClassName('job-list')[0].getElementsByTagName('li');
+
+    // Function to filter jobs based on input
+    function filterJobs() {
+        const searchText = searchInput.value.toLowerCase();
+
+        Array.from(jobList).forEach(function(job) {
+            const jobTitle = job.querySelector('.job-list-content h4').innerText.toLowerCase();
+            if (jobTitle.includes(searchText)) {
+                job.style.display = 'block';
+            } else {
+                job.style.display = 'none';
+            }
+        });
+    }
+
+    // Event listener for input changes
+    searchInput.addEventListener('input', filterJobs);
+</script>
 
 
 </body>
