--- a/templates/job-page.html
+++ b/templates/job-page.html
@@ -48,43 +48,49 @@
 							<li><a href="{{ url_for('index') }}">Home</a>
 							</li>
 
-							<li><a href="#" id="current">Pages</a>
+							<li><a href="#">For Freelancer</a>
 								<ul>
-									<li><a href="job-page.html">Job Page</a></li>
-									<li><a href="job-page-alt.html">Job Page Alternative</a></li>
-									<li><a href="resume-page.html">Resume Page</a></li>
-									<li><a href="shortcodes.html">Shortcodes</a></li>
-									<li><a href="pricing-tables.html">Pricing Tables</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="{{ url_for('bro_jobs') }}">Browse Jobs</a></li>
+									<li><a href="{{ url_for('bro_category') }}">Browse Categories</a></li>
+									<li><a href="{{ url_for('resume') }}">Add Resume</a></li>
+								</ul>
+							</li>
+			
+							<li><a href="#">Hire Freelancer</a>
+								<ul>
+									<li><a href="{{ url_for('addjob') }}">Add Job</a></li>
+									<li><a href="{{ url_for('manage_jobs') }}">Manage Jobs</a></li>
+									<li><a href="{{ url_for('manage_app') }}">Manage Application</a></li>
 								</ul>
 							</li>
 
-							<li><a href="#">For Candidates</a>
+							{% if 'username' in session %}
+
+							<li><a href="">Settings</a>
 								<ul>
-									<li><a href="browse-jobs.html">Browse Jobs</a></li>
-									<li><a href="browse-categories.html">Browse Categories</a></li>
-									<li><a href="add-resume.html">Add Resume</a></li>
-									<li><a href="manage-resumes.html">Manage Resumes</a></li>
-									<li><a href="job-alerts.html">Job Alerts</a></li>
+									<li><a href="{{ url_for('index') }}">Edit Profile</a></li>
+									<li><a href="{{ url_for('logout') }}">Logout</a></li>
+									<li><a href="{{ url_for('resume') }}">My resume</a></li>
 								</ul>
 							</li>
-
-							<li><a href="#">For Employers</a>
-								<ul>
-									<li><a href="add-job.html">Add Job</a></li>
-									<li><a href="manage-jobs.html">Manage Jobs</a></li>
-									<li><a href="manage-applications.html">Manage Applications</a></li>
-									<li><a href="browse-resumes.html">Browse Resumes</a></li>
-								</ul>
-							</li>
-
-							<li><a href="blog.html">Blog</a></li>
+							{% endif %}
 						</ul>
 
 
-						<ul class="responsive float-right">
-							<li><a href="my-account.html#tab2"><i class="fa fa-user"></i> Sign Up</a></li>
-							<li><a href="my-account.html"><i class="fa fa-lock"></i> Log In</a></li>
+						<ul class="float-right">
+							<!-- Check if the user is logged in -->
+							{% if 'username' in session %}
+								<!-- Show profile dropdown -->
+								<li class="dropdown">
+									<a class="profile">
+										<img style="width: 50px;" src="/static/images/profile.png">
+									</a>
+								</li>
+							{% else %}
+								<!-- Show login/signup links -->
+								<li><a href="{{ url_for('account') }}"><i class="fa fa-user"></i> Create account</a></li>
+								<!-- <li><a href="{{ url_for('login') }}"><i class="fa fa-lock"></i> Log In</a></li> -->
+							{% endif %}
 						</ul>
 
 					</nav>
@@ -278,8 +284,7 @@
 
 				<div class="seven columns">
 					<h4>About</h4>
-					<p>Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut
-						lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.</p>
+					<p>"Binary Brains: Powering your career journey through innovative backend solutions, revolutionizing the job portal experience with expertise and dedication.</p>
 					<a href="#" class="button">Get Started</a>
 				</div>
 
