--- a/templates/settings.html
+++ b/templates/settings.html
@@ -35,7 +35,7 @@
 
 		<!-- Logo -->
 		<div id="logo">
-			<h1><a href="index.html"><img src="/static/images/logo.png" alt="Work Scout" /></a></h1>
+			<h1><a href="{{ url_for('index') }}"><img src="/static/images/logo.png" alt="Work Scout" /></a></h1>
 		</div>
 
 		<!-- Menu -->
