--- a/templates/manage-resumes.html
+++ b/templates/manage-resumes.html
@@ -6,7 +6,7 @@
 <!-- Basic Page Needs
 ================================================== -->
 <meta charset="utf-8">
-<title>Work Scout</title>
+<title>BB Jobs</title>
 
 <!-- Mobile Specific Metas
 ================================================== -->
