--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,28 @@ header {
 	height: 90px;
 	background-color: #fff;
 }
+  
+  .popup-button {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	background-color: #333;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+	z-index: 999;
+  }
+  
+  .popup-button i {
+	font-size: 24px;
+  }
+  
 
 #logo {
 	margin-left: 0;
@@ -1032,7 +1054,7 @@ table.manage-table td.action a:hover { color: #505050; }
 	display: block;
 	width: 46px;
 	height: 46px;
-	background-color: rgba(0,0,0,0.3);
+	/* background-color: rgba(0,0,0,0.3); */
 	color: #fff;
 	-webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
