--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 <div id="wrapper">
 
 	<div class="popup-button">
-		<a href="/chat"><i class='bx bxs-chat'></i></a>
+		<a href=""><i class='bx bxs-chat'></i></a>
 	  </div>
 
 
