last final commit

--- a/templates/add-job.html
+++ b/templates/add-job.html
@@ -52,9 +52,9 @@
 
 							<li><a href="#">For Freelancer</a>
 								<ul>
-									<li><a href="browse-jobs.html">Browse Jobs</a></li>
-									<li><a href="browse-categories.html">Browse Categories</a></li>
-									<li><a href="">Add Resume</a></li>
+									<li><a href="{{ url_for('bro_jobs') }}">Browse Jobs</a></li>
+									<li><a href="{{ url_for('bro_category') }}">Browse Categories</a></li>
+									<li><a href="{{ url_for('resume') }}">Add Resume</a></li>
 								</ul>
 							</li>
 
